<resources>
    <string name="app_name">StyleruApp</string>
    <string name="login_header">ВОЙТИ</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="log_in">Log In</string>
    <string name="specific_course_description_header">Описание</string>
    <string name="specific_course_lectures_header">Лекторы</string>
    <string name="specificEnrolled">Вы записаны</string>
    <string name="description">Описание</string>
    <string name="comment">Комментарий</string>
    <string name="enter">Войти</string>
    <string name="forget">Забыли?</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="profile">Профиль</string>
    <string name="events">События</string>
    <string name="people">Люди</string>
    <string name="directions">Направления</string>
</resources>
